--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,11 @@ dependencies:
   file_picker: ^6.1.1
   syncfusion_flutter_pdfviewer: ^23.1.39
   flutter_launcher_icons: ^0.11.0
+  flutter_sound: ^9.2.13
+  permission_handler: ^9.2.0
+  path_provider: ^2.0.9
+  share: ^2.0.4
+
 
 flutter_launcher_icons:
   android: true
